manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: life

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: life-dashboard
  namespace: life
spec:
  replicas: 1
  selector:
    matchLabels:
      app: life-dashboard
  template:
    metadata:
      labels:
        app: life-dashboard
    spec:
      containers:
      - name: app
        image: tig0826/life-dashboard-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: life-dashboard
  namespace: life
spec:
  selector:
    app: life-dashboard
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: life-dashboard-ingress
  namespace: life
spec:
  ingressClassName: traefik
  rules:
  - host: life.mynet
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: life-dashboard
            port:
              number: 3000
